Added loose docs for each endpoint.
