# docs/swagger/swagger.json
@@ -7,10 +7,115 @@
         "license": {
             "name": "Apache 2.0",
             "url": "https://github.com/42wim/matterbridge/blob/master/LICENSE"
-        },
-        "version": "TODO"
+        }
     },
-    "host": "TODO",
     "basePath": "/api",
-    "paths": {}
+    "paths": {
+        "/message": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create/Update a message",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/config.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Lists messages",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/config.Message"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/stream": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Streams realtime messages",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/config.Message"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "config.Message": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "avatar": {
+                    "type": "string"
+                },
+                "channel": {
+                    "type": "string"
+                },
+                "event": {
+                    "type": "string"
+                },
+                "extra": {
+                    "type": "object"
+                },
+                "gateway": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "protocol": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "userid": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
